[package]
name = "rshare"
version = "0.1.0"
edition = "2021"
description = "A TUI application to expose localhost services to the internet"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4.34"
regex = "1.10.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-reverse-proxy = "0.5.1"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
uuid = { version = "1.7.0", features = ["v4"] }
http-body-util = "0.1.0"
bytes = "1.5.0"
dirs = "5.0.1"